objects/Partner_Site__c.object
<CustomObject>
    <description>Used to house Payer, Bill-To, Ship-To records from SAP</description>
    <label>Partner Site</label>
    <nameField>
        <displayFormat>Site-{000000000}</displayFormat>
        <label>Account Site Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>PKI_SAP_Fax__c</fullName>
        <label>PKI SAP Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_City__c</fullName>
        <label>PKI SAP City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Name_1__c</fullName>
        <label>PKI SAP Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Name_2__c</fullName>
        <label>PKI SAP Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Name_3__c</fullName>
        <label>PKI SAP Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Region__c</fullName>
        <label>PKI SAP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Street__c</fullName>
        <label>PKI SAP Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Function__c</fullName>
        <label>PKI SAP Function</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Language__c</fullName>
        <label>PKI SAP Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Sales_Org__c</fullName>
        <label>PKI SAP Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Telephone__c</fullName>
        <label>PKI SAP Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_City__c</fullName>
        <label>PKI SAP Local City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Postal_Code__c</fullName>
        <label>PKI SAP Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Country_Code__c</fullName>
        <label>PKI SAP Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Name_1__c</fullName>
        <label>PKI SAP Local Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Name_2__c</fullName>
        <label>PKI SAP Local Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Name_3__c</fullName>
        <label>PKI SAP Local Name 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Region__c</fullName>
        <label>PKI SAP Local Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Street__c</fullName>
        <label>PKI SAP Local Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Language__c</fullName>
        <label>PKI SAP Local Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>PKI SAP Customer Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Postal_Code__c</fullName>
        <label>PKI SAP Local Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Country_Code__c</fullName>
        <label>PKI SAP Local Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Local_Version_of_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PKI SAP Local Version of Partner</label>
        <referenceTo>Partner_Site__c</referenceTo>
        <relationshipLabel>English Version of Partner</relationshipLabel>
        <relationshipName>Local_Version_of_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>Cannot_Edit_Fields</fullName>
        <active>true</active>
        <description>Cannot edit SAP Customer Number unless you have a specific profile.</description>
        <errorConditionFormula>AND($Setup.Rules_Execution__c.Run__c, 
 OR(ISCHANGED(PKI_SAP_Customer_Number__c),
  ISCHANGED(PKI_SAP_Function__c)),
 NOT($Profile.Name  = &apos;Application Integration profiles&apos;))</errorConditionFormula>
        <errorMessage>You cannot edit fields unless you have a specific profile</errorMessage>
    </validationRules>
</CustomObject>